force-app/main/default/objects/Order__c/fields/Grand_Total_Edit__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Edit__c</fullName>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>