force-app/main/default/objects/Order__c/fields/Order_status_formula__c.field-meta.xml
<CustomField>
    <fullName>Order_status_formula__c</fullName>
    <formula>TEXT(Order_Status__c)</formula>
    <label>Order status</label>
    <type>Text</type>
</CustomField>