force-app/main/default/objects/Order__c/fields/Store_name__c.field-meta.xml
<CustomField>
    <fullName>Store_name__c</fullName>
    <formula>Store__r.Name</formula>
    <label>Store name</label>
    <type>Text</type>
</CustomField>