force-app/main/default/objects/Order__c/fields/Store_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Store_Name_Text__c</fullName>
    <label>Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>