force-app/main/default/objects/Order__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Visit__c</columns>
    <columns>Order_status_formula__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>